2024-12-20T12:13:41Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12431216178 # 721
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-20
* notice: last 14d: unq all: 14 46
* notice: prev accum: outdated-unq outdated-all / unq all: 907 4820 / 920 4858
* notice: next accum: outdated-unq outdated-all / unq all: 907 4820 / 921 4866
* notice: prev exec diff / last date diff / accum: unq all: +1 +8 -0 -0 / +1 +8 -0 -0 / 1 8
* notice: removed / changed dates: [] / [2024-12-20]

2024-12-20T00:37:19Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12423242125 # 720
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-20
* notice: last 14d: unq all: 13 38
* notice: prev accum: outdated-unq outdated-all / unq all: 906 4819 / 920 4858
* notice: next accum: outdated-unq outdated-all / unq all: 907 4820 / 920 4858
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-12-05] / []

2024-12-19T12:14:40Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12412469486 # 719
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-19
* notice: last 14d: unq all: 14 39
* notice: prev accum: outdated-unq outdated-all / unq all: 906 4819 / 918 4854
* notice: next accum: outdated-unq outdated-all / unq all: 906 4819 / 920 4858
* notice: prev exec diff / last date diff / accum: unq all: +2 +4 -0 -0 / +2 +4 -0 -0 / 2 4
* notice: removed / changed dates: [] / [2024-12-19]

2024-12-19T00:39:22Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12403908747 # 718