@@ -1,12 +1,7 @@
 {
-  "count": 46,
-  "uniques": 14,
+  "count": 39,
+  "uniques": 12,
   "views": [
-    {
-      "timestamp": "2024-12-07T00:00:00Z",
-      "count": 7,
-      "uniques": 2
-    },
     {
       "timestamp": "2024-12-08T00:00:00Z",
       "count": 2,
