@@ -1,3 +1,12 @@
+2024-12-22T00:41:09Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12449749446 # 724
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-22
+* notice: last 14d: unq all: 12 39
+* notice: prev accum: outdated-unq outdated-all / unq all: 907 4820 / 921 4866
+* notice: next accum: outdated-unq outdated-all / unq all: 909 4827 / 921 4866
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2024-12-07] / []
+
 2024-12-20T12:13:41Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12431216178 # 721
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-20
